Re-generate documentation, change resources names to more meaningful

--- a/templates/index.md.tmpl
+++ b/templates/index.md.tmpl
@@ -36,7 +36,7 @@ The following 3 license types (`jq .type`) do **NOT** support APIs:
 
 ## Example Usage
 
-{{tffile "sample.tf"}}
+{{tffile "examples/sample.tf"}}
 
 ## Authentication
 
