--- a/templates/resources/ignore_rule.md.tmpl
+++ b/templates/resources/ignore_rule.md.tmpl
@@ -15,3 +15,10 @@ Provides an Xray ignore rule resource. See [Xray Ignore Rules](https://www.jfrog
 {{tffile "examples/resources/xray_ignore_rule/resource.tf"}}
 
 {{ .SchemaMarkdown | trimspace }}
+
+## Import
+
+Ignore rules can be imported using their IDs, e.g.
+```
+$ terraform import xray_ignore_rule.ignore-rule-2590577 44b273ac-dca3-42dc-6819-f70648c0b48e
+```
