--- a/templates/resources/security_policy.md.tmpl
+++ b/templates/resources/security_policy.md.tmpl
@@ -19,3 +19,10 @@ Please note: It's only compatible with Bearer token auth method (Identity and Ac
 {{tffile "examples/resources/xray_security_policy/resource.tf"}}
 
 {{ .SchemaMarkdown | trimspace }}
+
+## Import
+
+Security policies can be imported using their names, e.g.
+```
+$ terraform import xray_security_policy.min_severity test-security-policy-severity
+```
