Apply project_key parsing for importing policy
Add import documentation for resources that support it

Remove import test from xray_settings as it doesn't support import

--- a/templates/resources/license_policy.md.tmpl
+++ b/templates/resources/license_policy.md.tmpl
@@ -22,7 +22,10 @@ Please note: It's only compatible with Bearer token auth method (Identity and Ac
 
 ## Import
 
-License policies can be imported using their names, e.g.
+Import is supported using the following syntax:
+
+```sh
+terraform import xray_license_policy.my-policy policy-name
 ```
 $ terraform import xray_license_policy.allowed_licenses test-license-policy-allowed
 ```
