--- a/templates/resources/security_policy.md.tmpl
+++ b/templates/resources/security_policy.md.tmpl
@@ -22,7 +22,10 @@ Please note: It's only compatible with Bearer token auth method (Identity and Ac
 
 ## Import
 
-Security policies can be imported using their names, e.g.
+Import is supported using the following syntax:
+
+```sh
+terraform import xray_security_policy.my-policy policy-name
 ```
 $ terraform import xray_security_policy.min_severity test-security-policy-severity
 ```
