Update doc templates

--- a/templates/resources/repository_config.md.tmpl
+++ b/templates/resources/repository_config.md.tmpl
@@ -16,7 +16,10 @@ Provides an Xray repository config resource. See [Xray Indexing Resources](https
 
 ## Import
 
-Repository configs can be imported using their names, e.g.
+Import is supported using the following syntax:
+
+```shell
+terraform import xray_repository_config.my-config config-repo-name
 ```
 $ terraform import xray_repository_config.xray-repo-config-pattern example-repo-local
 ```
