--- a/templates/resources/operational_risk_policy.md.tmpl
+++ b/templates/resources/operational_risk_policy.md.tmpl
@@ -16,7 +16,10 @@ Creates an Xray policy using V2 of the underlying APIs. Please note: It's only c
 
 ## Import
 
-Operational risk policies can be imported using their names, e.g.
+Import is supported using the following syntax:
+
+```shell
+terraform import xray_operational_risk_policy.my-policy policy-name
 ```
 $ terraform import xray_operational_risk_policy.min_risk test-operational-risk-policy-min-risk
 ```
