Use rule ID in import doc example for clarity

--- a/templates/resources/ignore_rule.md.tmpl
+++ b/templates/resources/ignore_rule.md.tmpl
@@ -21,5 +21,5 @@ Provides an Xray ignore rule resource. See [Xray Ignore Rules](https://www.jfrog
 Import is supported using the following syntax:
 
 ```shell
-terraform import xray_ignore_rule.my-rule rule-name
+terraform import xray_ignore_rule.my-rule 44b273ac-dca3-42dc-6819-f70648c0b48e
 ```
